--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "growthflow-website",
+  "name": "transitionmarketingai-website",
   "private": true,
   "version": "1.07.0",
   "type": "module",
