--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "dev:publisher": "vite --mode publisher",
     "build": "vite build",
+    "build:publisher": "vite build --mode publisher",
     "lint": "eslint .",
     "preview": "vite preview"
   },
