--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,9 +36,13 @@ jobs:
         
       - name: Build Main Site
         run: pnpm run build
+        env:
+          VITE_API_BASE_URL: ${{ secrets.VITE_API_BASE_URL }}
         
       - name: Build Publisher
         run: pnpm run build:publisher
+        env:
+          VITE_API_BASE_URL: ${{ secrets.VITE_API_BASE_URL }}
         
       - name: Copy 404.html for Publisher
         run: cp public/publisher-404.html dist-publisher/404.html
@@ -86,4 +90,3 @@ jobs:
         uses: actions/deploy-pages@v4
         with:
           artifact_name: publisher
-
