--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy to GitHub Pages
+name: Deploy Production Site to GitHub Pages
 
 on:
   push:
@@ -15,7 +15,10 @@ concurrency:
   cancel-in-progress: false
 
 jobs:
-  build:
+  deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -34,56 +37,19 @@ jobs:
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
         
-      - name: Build Main Site
+      - name: Build
         run: pnpm run build
-        
-      - name: Build Publisher
-        run: pnpm run build:publisher
-        
-      - name: Copy 404.html for Publisher
-        run: cp public/publisher-404.html dist-publisher/404.html
-        
-      - name: Create CNAME for Publisher
-        run: cp public/publisher-CNAME dist-publisher/CNAME
+        env:
+          VITE_API_BASE_URL: ${{ secrets.VITE_API_BASE_URL }}
         
       - name: Setup Pages
         uses: actions/configure-pages@v4
         
-      - name: Upload Main Site Artifact
+      - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          name: main-site
           path: './dist'
           
-      - name: Upload Publisher Artifact
-        uses: actions/upload-pages-artifact@v3
-        with:
-          name: publisher
-          path: './dist-publisher'
-          
-  deploy-main:
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-      - name: Deploy Main Site to GitHub Pages
+      - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
-        with:
-          artifact_name: main-site
-          
-  deploy-publisher:
-    environment:
-      name: publisher-pages
-      url: http://publisher.transitionmarketingai.com
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-      - name: Deploy Publisher to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v4
-        with:
-          artifact_name: publisher
-
