--- a/netlify.toml
+++ b/netlify.toml
@@ -4,22 +4,38 @@
 
 [build.environment]
   NODE_VERSION = "18"
+  NPM_FLAGS = "--version"
 
+# SPA routing
 [[redirects]]
   from = "/*"
   to = "/index.html"
   status = 200
 
+# Security headers
 [[headers]]
   for = "/*"
   [headers.values]
     X-Frame-Options = "DENY"
     X-XSS-Protection = "1; mode=block"
     X-Content-Type-Options = "nosniff"
+    Referrer-Policy = "strict-origin-when-cross-origin"
 
-# Custom domain configuration
+# Custom domain redirects
 [[redirects]]
   from = "https://transitionmarketingai.com/*"
+  to = "https://www.transitionmarketingai.com/:splat"
+  status = 301
+  force = true
+
+[[redirects]]
+  from = "http://transitionmarketingai.com/*"
+  to = "https://www.transitionmarketingai.com/:splat"
+  status = 301
+  force = true
+
+[[redirects]]
+  from = "http://www.transitionmarketingai.com/*"
   to = "https://www.transitionmarketingai.com/:splat"
   status = 301
   force = true
